Add default_web_client_id string resource
Introduced a new string resource 'default_web_client_id' with the value 'test' to strings.xml, likely for use in authentication or API integration.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Seekr</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_second">SecondActivity</string>
+    <string name="default_web_client_id">test</string>
 </resources>
