Update default web client ID in strings.xml
Replaces the placeholder value for 'default_web_client_id' with the actual Google client ID required for authentication or API integration.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Seekr</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_second">SecondActivity</string>
-    <string name="default_web_client_id">test</string>
+    <string name="default_web_client_id">774427659389-u1kf3d7vsajj11gnt8h4vraijr7hqh7r.apps.googleusercontent.com</string>
 </resources>
